--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -216,7 +216,7 @@ h1 { font-size: 60px }
 
 .catalog-card .card-image{
     height: 200px;
-    overflow: hidden; 
+    overflow: hidden;
     border-radius: .25rem;
     display: flex;
     justify-content: center;
@@ -225,10 +225,16 @@ h1 { font-size: 60px }
 
 .catalog-card:hover .card-image > .backdrop{
     opacity: 1;
+    z-index: 1;
+}
+
+.catalog-card:hover .card-image > img{
+    transform: scale(1.1);
 }
 
 .catalog-card .card-image img{
-    height: 120%;
+    width: 120%;
+    transition: .3s ease;
 }
 
 .card-image .backdrop{
